--- a/desafios/d012/estilo.css
+++ b/desafios/d012/estilo.css
@@ -18,6 +18,7 @@
     src: url(fontes/Sriracha-Regular.ttf);
 }
 :root {
+    --fonte0: Verdana, Geneva, Tahoma, sans-serif;
     --fonte-1-regular: 'fonte01' ;
     --fonte-2-bold: 'fonte02';
     --fonte-3-black: 'fonte03';
@@ -30,7 +31,7 @@
 }
 body, html  {
     min-height: 100vh;
-    
+    font-family: var(--fonte0);
     
 }
 header {
@@ -42,15 +43,19 @@ header {
 }
 
 header h1 {
+    font-size: 10vw;
+    font-family: var(--fonte-2-bold);
     font-variant: small-caps;
     padding-top: 50px;
 }
 
 header p {
+    
     padding-bottom: 50px;
     
 }
 section {
+    font-size: 3.5vw;
     font-family: var(--fonte-4-texto);
     padding-bottom: 10vh;
     padding-top: 10vh;
@@ -58,10 +63,11 @@ section {
     padding-left: 30px;
 }
 
-
-
-
+section > p {
+    padding-bottom: 2em;
+}
 section.img1 {
+    box-shadow: 1px 1px 5px black;
     background-image: url(imagens/background001.jpg);
     background-position: right center;
     background-size: cover;
@@ -70,8 +76,14 @@ section.img1 {
     color: white;
 }
 
-section.img2 {
+section.img1 > p , section.img2 > p{
+    padding: 5px;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.295);
+}
 
+section.img2 {
+    box-shadow: 1px 1px 5px black;
     background-image: url(imagens/background002.jpg);
     background-position: center center;
     background-repeat: no-repeat;
