--- a/exercicios/ex.026/mq02/estilos/horizontal.css
+++ b/exercicios/ex.026/mq02/estilos/horizontal.css
@@ -1,3 +1,12 @@
 @charset "UTF-8";
 
 /* Aparelho deitado (landscape) */
+
+body {
+    background-image: url(../imagens/cev-landscape.jpg);
+    background-position: bottom left;
+}
+
+h1 {
+    display: none;
+}
