--- a/exercicios/ex.026/mq02/estilos/style.css
+++ b/exercicios/ex.026/mq02/estilos/style.css
@@ -1,3 +1,25 @@
 @charset "UTF-8";
 
 /* Estilo geral */
+
+* {
+    padding: 0px;
+    margin: 0px;
+}
+
+body  {
+    width: 100vw;
+    height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+
+}
+
+h1 {
+    color: yellow;
+    padding: 10px;
+    text-shadow: 2px 2px 2px black;
+}
+
