--- a/exercicios/ex.026/mq02/estilos/vertical.css
+++ b/exercicios/ex.026/mq02/estilos/vertical.css
@@ -1,3 +1,13 @@
 @charset "UTF-8";
 
 /* Aparelho em pé (portrait) */
+
+body {
+   background-image: url(../imagens/cev-portrait.jpg);
+    
+    background-position: center bottom;
+}
+
+h1 {
+    display: none;
+}
